--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ on: [ push ]
 
 jobs:
   build:
-    runs-on: docker
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         go-version: [ '1.23', '1.24', '1.25' ]
